--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>replit</title>
+    <title>hospital</title>
 
     <!-- External CSS Link -->
     <link href="style.css" rel="stylesheet" type="text/css" />
